<resources>
    <string name="app_name">MyQuiz</string>
    <string name="sQuestionTag1">Question 1</string>
    <string name="sQuestion1Description">In which year São Paulo city was founded?</string>
    <string name="sQ1Option1Correct">25/Jan/1554</string>
    <string name="sQ1Option2">28/Jan/1554</string>
    <string name="sQ1Option3">01/Jan/1554</string>
    <string name="sIntroduction">Do you know São Paulo City?</string>
    <string name="sQuestionTag2">Question 2</string>
    <string name="sQuestion2Description">Select two words that belong to the Name and Last name of São Paulo City´s Mayor!</string>
    <string name="sQ2Option1Correct">João</string>
    <string name="sQ2Option2">Pedro</string>
    <string name="sQ2Option3">Mória</string>
    <string name="sQ2Option4Correct">Dória</string>
    <string name="sQuestionTag3">Question 3</string>
    <string name="sQuestion3Description">Type the name of the biggest soccer team from São Paulo!</string>
    <string name="sQ3Hint">Timão</string>
    <string name="sQ3Prank">palmeiras</string>
    <string name="sQ3PrankAnswer">Has no World Championship.</string>
    <string name="sQuestionTag4">Question 4</string>
    <string name="sFinishQuiz">End Quiz</string>
    <string name="sRestartQuiz">Restart</string>
    <string name="sQ3Corinthians">Corinthians</string>
    <string name="sQ4Option1Wrong">Mogi Mirim</string>
    <string name="sQ4Option2Correct">Mogi das Cruzes</string>
    <string name="sQ4Option3Wrong">Poá</string>
    <string name="sQ4Option4Wrong">Porto Alegre</string>
    <string name="sQuestion4Description">Which of below cities do not belong to Metropolitan Region of São Paulo!</string>
    <string name="sQuestionTag5">Question 5</string>
    <string name="sYes">Yes</string>
    <string name="sNo">No</string>
    <string name="sQuestion5Description">Does São Paulo have the biggest Japanese colony outside Japan?</string>
    <string name="sQuestion6">Question 6</string>
    <string name="sQuestion6Description">What is the most important Avenue in São Paulo?</string>
    <string name="sQ6Option1Wrong">Avenida Ibirapuera</string>
    <string name="sQ6Option2Correct">Avenida Paulista</string>
</resources>
